--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -11,3 +11,6 @@ token=2c2099e2a301c7643cfc84ebb1dfe65c35b552557ebec12895da3888
 [log]
 log_file = D:\\PythonProgram\\log
 
+[signature]
+signature=123456789
+
