--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -1,16 +1,16 @@
 [oracle]
-host = 120.92.76.12
-port = 3306
-data_base = trading
-user = root
-password = Trading@it1851
+ip = 120.92.105.241
+port = 1521
+uname = mdmdefault
+pwd = primeton
+tnsname = helowinXDB
 
 [token]
-token=2c2099e2a301c7643cfc84ebb1dfe65c35b552557ebec12895da3888
+token = 2c2099e2a301c7643cfc84ebb1dfe65c35b552557ebec12895da3888
 
 [log]
 log_file = D:\\PythonProgram\\log
 
 [signature]
-signature=123456789
+signature = b8908a20bd70f465330b434e18441d3b
 
